public interface Mediator {
     void sendMessage();
     void displayMessage(String sender, String message);
}
