@startuml
interface GUI.Mediator {
~ void sendMessage()
~ void displayMessage(String,String)
}
class GUI.ChatWindow {
- JTextArea chatArea
- JTextField messageField
- String sender
- String recipient
- ArrayList<Colleague> colleagues
- ChatWindow recipientWindow
- ArrayList<ChatWindow> groupChatWindows
+ boolean isGroupChat
+ void sendMessage()
+ void setRecipientWindow(ChatWindow)
+ void displayMessage(String,String)
}
class GUI.ChatGUI {
- JButton startButton
- JComboBox<String> conversationType
- void setStartPanel()
- void startPrivateChat()
- void startGroupChat()
}
interface GUI.Colleague {
+ void setMediator(Mediator)
+ String getName()
~ void receive(String,String)
+ Mediator getMediator()
}
class GUI.ConcreteColleague {
~ String name
~ Mediator chatWindow
+ void setMediator(Mediator)
+ Mediator getMediator()
+ String getName()
+ void receive(String,String)
}
class GUI.PrivateChatFrame {
- JComboBox<String> senders
- JComboBox<String> recipients
- ArrayList<Colleague> colleagues
- void initializeChat()
- void setComboBox()
- void setFonts()
- void setStartButton()
- void openPrivateChatWindows(String,String)
- void setPanels()
}
class GUI.GroupChatFrame {
- ArrayList<ChatWindow> chatWindows
- ArrayList<Colleague> colleagues
- void initializeChat()
}


GUI.Mediator <|.. GUI.ChatWindow
GUI.JFrame <|-- GUI.ChatWindow
GUI.JFrame <|-- GUI.ChatGUI
GUI.Colleague <|.. GUI.ConcreteColleague
GUI.JFrame <|-- GUI.PrivateChatFrame
GUI.JFrame <|-- GUI.GroupChatFrame
@enduml